docs/assets/styles/docs.css
/* ... */
#content aside :first-child {
  margin-block-start: 0;
}

#content aside :last-child {
  margin-block-end: 0;
}

@media screen and (max-width: 959px) {
  #content aside {
    max-width: none;
    margin-inline: 0;
    margin-block: 2rem;
    float: none;
  }
}

figure.float-end {
  max-width: 50%;
  margin-inline-start: var(--quiet-content-spacing);
  margin-block: 0;
  float: right;
}

@media screen and (max-width: 959px) {
  figure.float-end {
    max-width: none;
    margin-inline: auto;
    margin-block-end: var(--quiet-content-spacing);
    float: none;
  }
}

/* Outline */
#outline {
  order: 2;
}

#outline h2 > a {
  color: inherit;
  font-weight: inherit;
}

#outline > nav {
  position: sticky;
  top: calc(var(--docs-header-height) + 3.5rem);
}

#outline-expandable {
  display: none;
}

#outline-expandable ul {
  column-gap: 2rem;
  padding-inline: 1rem;
  columns: 2;
}

#outline [data-level='3'] {
  margin-inline-start: 1rem;
}

@media screen and (max-width: 1419px) {
  :root {
    --docs-content-spacing: 4rem;
  }

  #body,
  #navbar {
    padding-inline: 2rem;
  }
}

@media screen and (max-width: 1279px) {
  #page {
    display: block;
    min-width: 0; /* prevent overflowing content from stretching the column */
    padding-inline-end: 2rem;
  }

  #outline {
    margin-block-start: 1.5rem;
    margin-block-end: -1rem;
  }

  #outline-standard {
    display: none;
  }

  #outline-expandable {
    display: block;
  }
}

@media screen and (max-width: 959px) {
  .header-group:not(:first-of-type) + .header-group {
    padding-inline-start: 0.5rem;
  }

  #body {
    display: block;
    padding-inline: 0;
  }

  #navbar {
    padding-inline: 0.5rem;
  }

  #open-sidebar,
  #close-sidebar {
    display: flex;
  }

  #close-sidebar {
    position: sticky;
    top: 0.5rem;
    left: calc(100% - 0.5rem);
  }

  #sidebar {
    z-index: var(--docs-sidebar-z-index);
    position: fixed;
    top: 0;
    bottom: 0;
    left: 1rem;
    width: 100%;
    max-width: calc(100% - 2rem);
    height: calc(100% - 2rem);
    margin-block-start: 1rem;
    padding-inline: 1.5rem;
    padding-block: 1rem 2rem;
    translate: 0 100%;
    border-right: none;
    border-radius: calc(var(--quiet-border-radius) * 2);
    background: var(--quiet-background-color);
    font-size: 1rem;
    transition:
      var(--docs-sidebar-speed) translate cubic-bezier(0.33, 1, 0.68, 1),
      var(--docs-sidebar-speed) box-shadow cubic-bezier(0.33, 1, 0.68, 1);

    nav {
      margin-block-start: -1.5rem;
    }
  }

  .docs-sidebar-open #sidebar {
    translate: 0;
    box-shadow: 0 1px 1rem rgb(0 0 0 / 0.33);
  }

  #backdrop {
    z-index: calc(var(--docs-sidebar-z-index) - 1);
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    backdrop-filter: var(--quiet-backdrop-filter);
    -webkit-backdrop-filter: var(--quiet-backdrop-filter);
    background-color: var(--quiet-backdrop-color);
  }

  #page {
    max-width: 70ch;
    margin: 0 auto;
    padding-inline: 1rem;
  }

  #outline-expandable ul {
    columns: 1;
  }
}

.docs-is-resizing #sidebar,
.docs-is-resizing #backdrop {
  transition: none;
}

/* Icon buttons */
.docs-icon-button {
  all: unset;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 0.33rem;
  cursor: pointer;
}

.docs-icon-button:focus-visible {
  outline: var(--quiet-focus-ring);
  outline-offset: 2px;
}

.docs-icon-button > svg {
  align-self: center;
  justify-self: center;
  width: 1.5rem;
  height: 1.5rem;
}

.docs-icon-button > quiet-icon {
  font-size: 1.5rem;
}

/* Aside content */
.docs-aside {
  font-size: 0.875rem;
  line-height: calc(var(--quiet-line-height) * 0.875);
}

.docs-aside h2 {
  margin-block: 0.5rem;
  font-size: inherit;
}

.docs-aside ul {
  margin-inline: 0;

  &:last-child {
    margin-block-end: 0;
  }
}

.docs-aside ul ul {
  margin-inline-start: 0.25rem;
  margin-block: 0.5rem;
  padding-inline-start: 0.75rem;
  border-inline-start: var(--quiet-border-style) var(--quiet-border-width) var(--quiet-neutral-stroke-soft);
}

.docs-aside li {
  color: var(--quiet-text-muted);
  list-style: none;
}

.docs-aside li:not(:last-of-type) {
  margin-block-end: 0.5rem;
}

.docs-aside a {
  color: inherit;
  font-weight: var(--quiet-font-weight-normal);
  text-decoration: none;
  transition: 150ms color ease;

  @media (hover: hover) {
    &:not(.current):hover {
      color: var(--quiet-text-body);
    }
  }
}

.docs-aside .current {
  color: var(--quiet-primary-text-colorful);
  font-weight: var(--quiet-font-weight-semibold);
}

/* Callouts */
quiet-callout {
  margin-block-end: var(--quiet-content-spacing);

  > :last-child {
    margin-block-end: 0;
  }

  code {
    white-space: nowrap;
  }

  &[variant='primary'] {
    code {
      background-color: color-mix(in oklab, var(--quiet-primary-fill-soft), transparent 25%);
    }

    kbd {
      border-color: var(--quiet-primary-fill-soft);
      box-shadow: 0 max(1px, 0.0715em) 0 0 var(--quiet-primary-fill-soft);
    }
  }

  &[variant='secondary'] {
    code {
      background-color: color-mix(in oklab, var(--quiet-neutral-fill-soft), transparent 25%);
    }

    kbd {
      border-color: var(--quiet-neutral-fill-soft);
      box-shadow: 0 max(1px, 0.0715em) 0 0 var(--quiet-neutral-fill-soft);
    }
  }

  &[variant='constructive'] {
    code {
      background-color: color-mix(in oklab, var(--quiet-constructive-fill-soft), transparent 25%);
    }

    kbd {
      border-color: var(--quiet-constructive-fill-soft);
      box-shadow: 0 max(1px, 0.0715em) 0 0 var(--quiet-constructive-fill-soft);
    }
  }

  &[variant='destructive'] {
    code {
      background-color: color-mix(in oklab, var(--quiet-destructive-fill-soft), transparent 25%);
    }

    kbd {
      border-color: var(--quiet-destructive-fill-soft);
      box-shadow: 0 max(1px, 0.0715em) 0 0 var(--quiet-destructive-fill-soft);
    }
  }
}
/* ... */

